@@ -67,8 +67,8 @@ class RinexObsReader(object):
 
     def __init__(self, **kwargs):
         self.header = self.RINEX_HEADER_CLASS()
-        self.epochs = []
         self.datadict = {}
+        self.interval_filter = kwargs.get("interval_filter", 0)
         self.backup_epochs = []
         self.rinex_obs_file = kwargs.get("rinex_obs_file", "")
         self.rinex_epochs = kwargs.get("rinex_epochs", [])
@@ -172,7 +172,12 @@ class RinexObsReader(object):
         """
         out = ""
         for rinex_epoch in self.rinex_epochs:
-            out += "%s\n" % rinex_epoch.to_rinex3()
+            assert isinstance(rinex_epoch, RinexEpoch)
+            seconds_of_day = rinex_epoch.timestamp.hour * 3600 
+            seconds_of_day += rinex_epoch.timestamp.minute * 60
+            seconds_of_day += rinex_epoch.timestamp.second
+            if (self.interval_filter > 0) and (seconds_of_day % self.interval_filter == 0):
+                out += "%s\n" % rinex_epoch.to_rinex3()
         return out
 
     def read_header(self, sort_obs_types=True):
@@ -211,17 +216,6 @@ class RinexObsReader(object):
             if epoch.has_satellite_system(sat_sys):
                 return True
         return False
-
-    def add_epoch(self, epoch):
-        """
-        Adds epoch to epoch list if not already added
-
-        Args:
-            epoch: Epoch as str '%Y-%m-%dT%H:%M:%SZ'
-        """
-        if epoch not in self.epochs:
-            self.epochs.append(epoch)
-
 
     def update_header_obs(self):
         """
@@ -294,7 +288,6 @@ class Rinex2ObsReader(RinexObsReader):
         self.year = self.correct_year2(year2)
 
         self.rinex_file_sequence = self.station_doy_session[7]
-        self.epochs = []
         self.datadict = {}
         self.backup_epochs = []
 
@@ -354,11 +347,6 @@ class Rinex2ObsReader(RinexObsReader):
         # SKIP HEADER
         with open(self.rinex_obs_file, "r") as handler:
                
-            # for i, line in enumerate(handler):
-            #     if 'END OF HEADER' in line:
-            #         break
-            # del i
-            # i = 0
             rinex_obs = {
                 "epochs": [], 
                 "fileName": self.rinex_obs_file,
@@ -370,82 +358,78 @@ class Rinex2ObsReader(RinexObsReader):
                 "epochLast": None
             } 
             end_of_header = False
-            #with open(self.rinex_obs_file, "r") as handler:
-            if True:
-                while True:
+            while True:
 
-                    # Check for END_OF_FILE
-                    line = handler.readline()
-                    if "END OF HEADER" in line:
-                        celery_logger.debug("End of Header Reached")
-                        end_of_header = True
-                    if not end_of_header:
+                # Check for END_OF_FILE
+                line = handler.readline()
+                if "END OF HEADER" in line:
+                    celery_logger.debug("End of Header Reached")
+                    end_of_header = True
+                if not end_of_header:
+                    continue
+                if line == "":
+                    break
+
+                # Get DateLine
+                r = re.search(self.RINEX_DATELINE_REGEXP, line)
+                if r is not None:
+                    timestamp = datetime.datetime(
+                        self.correct_year2(year2=int(r.group("year2"))),
+                        int(r.group("month")),
+                        int(r.group("day")),
+                        int(r.group("hour")),
+                        int(r.group("minute")),
+                        int(float(r.group("second")))
+                    )
+                    epoch = timestamp.strftime("%FT%TZ")
+
+                    rnx_epoch = {
+                        "id": epoch,
+                        "satellites": [],
+                    }
+                    sats = r.group('sat1').strip()
+                    # Number of Satellites
+                    nos = int(r.group("nos"))
+                    if nos == 0:
                         continue
-                    if line == "":
-                        break
 
-                    # Get DateLine
-                    r = re.search(self.RINEX_DATELINE_REGEXP, line)
-                    if r is not None:
-                        timestamp = datetime.datetime(
-                            self.correct_year2(year2=int(r.group("year2"))),
-                            int(r.group("month")),
-                            int(r.group("day")),
-                            int(r.group("hour")),
-                            int(r.group("minute")),
-                            int(float(r.group("second")))
+                    additional_lines = int((nos-1)/12 % 12)
+                    for j in range(additional_lines):
+                        line = handler.readline()
+                        r2 = re.search(self.RINEX_DATELINE_REGEXP_SHORT, line)
+                        if r2 is not None:
+                            sats += r2.group('sat2').strip()
+
+                    # Get Observation Data
+                    for j in range(nos):
+                        # i += 1
+                        sat_num = sats[(3 * j):(3 * (j + 1))]
+                        self.add_satellite(sat_num)
+
+                        raw_obs = ""
+                        for k in range(1 + int(len(self.header.observation_types) / 5)):
+                            raw_obs = "%s%s" % (
+                                raw_obs, self.prepare_line(handler.readline()))
+
+                        rnx_epoch["satellites"].append(
+                            self.read_satellite(
+                                sat_id=sat_num, line=raw_obs)
                         )
-                        epoch = timestamp.strftime("%FT%TZ")
-                        self.add_epoch(epoch)
 
-                        rnx_epoch = {
-                            "id": epoch,
-                            "satellites": [],
-                        }
-                        sats = r.group('sat1').strip()
-                        # Number of Satellites
-                        nos = int(r.group("nos"))
-                        if nos == 0:
-                            continue
+                    # Sort Satellites within epoch
+                    rnx_epoch["satellites"] = sorted(
+                        rnx_epoch["satellites"], key=lambda sat: sat["id"])
 
-                        additional_lines = int((nos-1)/12 % 12)
-                        for j in range(additional_lines):
-                            line = handler.readline()
-                            r2 = re.search(self.RINEX_DATELINE_REGEXP_SHORT, line)
-                            if r2 is not None:
-                                sats += r2.group('sat2').strip()
-
-                        # Get Observation Data
-                        for j in range(nos):
-                            # i += 1
-                            sat_num = sats[(3 * j):(3 * (j + 1))]
-                            self.add_satellite(sat_num)
-
-                            raw_obs = ""
-                            for k in range(1 + int(len(self.header.observation_types) / 5)):
-                                raw_obs = "%s%s" % (
-                                    raw_obs, self.prepare_line(handler.readline()))
-
-                            rnx_epoch["satellites"].append(
-                                self.read_satellite(
-                                    sat_id=sat_num, line=raw_obs)
-                            )
-
-                        # Sort Satellites within epoch
-                        rnx_epoch["satellites"] = sorted(
-                            rnx_epoch["satellites"], key=lambda sat: sat["id"])
-
-                        rinex_obs["epochs"].append(rnx_epoch)
-                        rinex_epoch = RinexEpoch(
-                            timestamp=datetime.datetime.strptime(
-                                rnx_epoch["id"], cc.RNX_FORMAT_DATETIME),
-                            observation_types=self.header.observation_types,
-                            satellites=rnx_epoch["satellites"],
-                            rcv_clock_offset=self.header.rcv_clock_offset
-                        )
-                        # if rinex_epoch.is_valid():
-                        if True:
-                            self.rinex_epochs.append(rinex_epoch)
+                    rinex_obs["epochs"].append(rnx_epoch)
+                    rinex_epoch = RinexEpoch(
+                        timestamp=datetime.datetime.strptime(
+                            rnx_epoch["id"], cc.RNX_FORMAT_DATETIME),
+                        observation_types=self.header.observation_types,
+                        satellites=rnx_epoch["satellites"],
+                        rcv_clock_offset=self.header.rcv_clock_offset
+                    )
+                    # if rinex_epoch.is_valid():
+                    self.rinex_epochs.append(rinex_epoch)
 
             if len(rinex_obs["epochs"]) > 0:
                 rinex_obs["epochFirst"] = rinex_obs["epochs"][0]["id"]
@@ -525,7 +509,6 @@ class Rinex3ObsReader(RinexObsReader):
        
         self.rinex_obs_file = rinex_obs_file
 
-        self.epochs = []
         self.datadict = {}
         self.backup_epochs = []
 
@@ -583,7 +566,6 @@ class Rinex3ObsReader(RinexObsReader):
                             int(float(r.group("second")))
                         )
                         epoch = timestamp.strftime("%FT%TZ")
-                        self.add_epoch(epoch)
 
                         rnx_epoch = {
                             "id": epoch,
@@ -596,18 +578,6 @@ class Rinex3ObsReader(RinexObsReader):
 
                         # Number of Satellites
                         nos = int(r.group("num_of_sats"))
-                        # celery_logger.debug("Number of Sats: {}".format(nos))
-                        # epoch_pool = multiprocessing.Pool(processes=multiprocessing.cpu_count())
-                        # epoch_satellites = [handler.readline() for j in range(nos)]
-
-                        # pool_results = epoch_pool.map(self.read_epoch_satellite, [handler.readline() for j in range(nos)])
-                        # for result in pool_results:
-                        #     celery_logger.debug(result)
-                        #     if result:
-                        #         self.add_satellite(result["sat_num"])
-                        #         rnx_epoch["satellites"].append(
-                        #             result["sat_data"]
-                        #         )
 
                         for j in range(nos):
                             line = handler.readline()
@@ -623,7 +593,15 @@ class Rinex3ObsReader(RinexObsReader):
                         # Sort Satellites within epoch
                         rnx_epoch["satellites"] = sorted(
                             rnx_epoch["satellites"], key=lambda sat: sat["id"])
-
+                        rinex_epoch = RinexEpoch(
+                            timestamp=datetime.datetime.strptime(
+                                rnx_epoch["id"], cc.RNX_FORMAT_DATETIME),
+                            observation_types=self.header.sys_obs_types,
+                            satellites=rnx_epoch["satellites"],
+                            rcv_clock_offset=self.header.rcv_clock_offset
+                        )
+                        # if rinex_epoch.is_valid():
+                        self.rinex_epochs.append(rinex_epoch)
                         rinex_obs["epochs"].append(rnx_epoch)
 
             if len(rinex_obs["epochs"]) > 0:
